# CVfunk-Modules

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  plugin-mm.json  plugin.dylib  plugin.hpp  plugin.json
.github/workflows/: Build_plugin.yml
presets/FlowerPatch/: 01_Knot Theory.vcvm  02_Raindrops.vcvm  03_Roses.vcvm
presets/Ouros/: 01_Saw.vcvm  02_Square.vcvm  03_Triangle.vcvm  05_Piano.vcvm  06_Violin.vcvm  07_Saxophone.vcvm  08_Marimba.vcvm  09_Electric Piano.vcvm  10_Glass Harp.vcvm  11_.vcvm  Aardvark.vcvm  Bunny.vcvm  Butterfly.vcvm  Dragonfly.vcvm  Guinea Pig.vcvm  Heart.vcvm  Mantaray.vcvm  Mitten.vcvm  Moth.vcvm  Mouse.vcvm  Mushroom.vcvm  Rubber Ducky.vcvm
presets/Syncro/: 01_Powers of 2.vcvm  02_Primes.vcvm  03_Multiples.vcvm  04_Divs.vcvm  05_Polyrhythms.vcvm
src/: Alloy.cpp  Arrange.cpp  Aulos.cpp  CVfunkBlank.cpp  CVfunkBlank4HP.cpp  Cartesia.cpp  CircularBuffer.hpp  Clpy.cpp  Collatz.cpp  Count.cpp  Decima.cpp  EnvelopeArray.cpp  FilterAulos.h  FilterGlass.h  FilterTriton.h  FlowerPatch.cpp  Glass.cpp  Hammer.cpp  Haze.cpp  HexMod.cpp  Hub.cpp  ImpulseController.cpp  JunkDNA.cpp  Magnets.cpp  Morta.cpp  Node.cpp  Nona.cpp  Onion.cpp  Ouros.cpp  PentaSequencer.cpp  Picus.cpp  PreeeeeeeeeeessedDuck.cpp  PressedDuck.cpp  Ranges.cpp  Rat.cpp  Signals.cpp  StepWave.cpp  Steps.cpp  Strata.cpp  Strings.cpp  (+11 more)
